objects/TempUpdateObject__c.object
<CustomObject>
    <description>Object to put some other objects temporarily values.</description>
    <fields>
        <fullName>Created_Reason__c</fullName>
        <description>reason of putting this into temporary objects</description>
        <label>Created Reason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectId__c</fullName>
        <description>Id of the object</description>
        <label>ObjectId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectType__c</fullName>
        <description>Type/name of the object.</description>
        <label>ObjectType</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>TempUpdateObject</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ObjectId__c</columns>
        <columns>ObjectType__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>TempUpdateObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TempUpdateObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>